# loghew

./: .gitignore  Cargo.toml  LICENSE  README.md  dist-workspace.toml  gen_live_log.py  gen_log.py
src/: app.rs  config.rs  event.rs  main.rs  worker.rs
src/log/: index.rs  mod.rs  parser.rs  reader.rs
src/search/: mod.rs
src/ui/: colors.rs  input_bar.rs  log_view.rs  mod.rs  status_bar.rs
tests/: render_test.rs
