[package]
name = "loghew"
version = "0.1.1"
edition = "2024"
description = "A TUI log viewer"
homepage = "https://github.com/nehadyounis/loghew"
repository = "https://github.com/nehadyounis/loghew"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
clap = { version = "4", features = ["derive"] }
regex = "1"
memmap2 = "0.9"
memchr = "2"
chrono = "0.4"
unicode-width = "0.2"
anyhow = "1"
notify-rust = "4"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "6"

[profile.release]
lto = true
codegen-units = 1
strip = true

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
